[gd_scene load_steps=4 format=3 uid="uid://bbknxxfju425m"]

[ext_resource type="Script" uid="uid://dx02hakk2m0mq" path="res://HUD/Dialogos/dialogo.gd" id="1_f7unp"]
[ext_resource type="Texture2D" uid="uid://cobxh1wqncib2" path="res://HUD/Dialogos/dialogo.png" id="2_fhxja"]
[ext_resource type="Texture2D" uid="uid://qaen88eu1dri" path="res://HUD/Dialogos/continua.png" id="3_l1f0c"]

[node name="Dialogos" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_f7unp")

[node name="CaixaDeDialogo" type="NinePatchRect" parent="."]
texture_filter = 1
texture_repeat = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -293.0
offset_top = -247.0
offset_right = 306.482
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_fhxja")

[node name="NomeLabel" type="Label" parent="CaixaDeDialogo"]
layout_mode = 0
offset_left = 19.0
offset_top = 3.0
offset_right = 444.0
offset_bottom = 32.0
autowrap_mode = 1

[node name="TextoLabel" type="Label" parent="CaixaDeDialogo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.741
offset_top = -56.0
offset_right = 298.259
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 2

[node name="IndicadorProximo" type="TextureRect" parent="CaixaDeDialogo"]
layout_mode = 0
offset_left = 543.0
offset_top = 150.0
offset_right = 631.0
offset_bottom = 214.0
scale = Vector2(0.5736526, 0.5021816)
texture = ExtResource("3_l1f0c")

[node name="LetraTimer" type="Timer" parent="."]
wait_time = 0.251
one_shot = true
